--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,2 +1,37 @@
 
 /* css */
+
+h2, h1, h4{
+    font-family: 'Georgia Pro Cond', sans-serif;
+}
+
+h5{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    transform: scale(1,1.3);
+}
+
+p{
+    font-family: 'Arial', sans-serif;
+}
+
+.rightcol{
+    font-family: 'Georgia Pro Cond', sans-serif;
+}
+.headdiv{
+    border-top: solid 0.1rem black ;
+    position: relative;
+    top: 70px;
+}
+
+.divider{
+    border-bottom: solid 0.1rem black ;
+    position: relative;
+    top:0.30em;
+}
+
+.headline{
+    transform: scale(1,2);
+    margin-top: 1rem;
+}
+
+
